// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`renders 1`] = `
<button
  class="sc-beqWaB jwCnUE"
>
  foo
</button>
`;

exports[`renders as a secondary button 1`] = `
<button
  class="sc-beqWaB cbxFOP"
>
  foo
</button>
`;
